hphp/hack/test/typecheck/classname/static_class_bad.php.exp
File "static_class_bad.php", line 5, characters 8-13:
'static' is undefined outside of a class (Typing[4061])
