hphp/hack/test/typecheck/classname/static_class_bad.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

function not_in_class(): bool {
  $x = static::class;
  return false;
}
